...
                E-mail
              </Text>

              <TextInput
                value={email}
                onChangeText={setEmail}
                placeholder="Digite seu e-mail"
                placeholderTextColor="#ccc"
                keyboardType="email-address"
                autoCapitalize="none"
                className="bg-white rounded-lg px-4 py-3 mb-4"
              />

...
                Senha
              </Text>
              <View className="relative mb-6">
                <TextInput
                  value={password}
                  onChangeText={setPassword}
                  placeholder="Digite sua senha"
                  placeholderTextColor="#ccc"
                  secureTextEntry={!showPassword}
                  className="bg-white rounded-lg px-4 py-3 pr-12"
                />

                <TouchableOpacity
...
                <Text className="text-gray-300 underline">
                  Esqueceu sua senha?
                </Text>
              </TouchableOpacity>

              <Button
                title="Entrar"
                disabled={loading || !isLoginFormValid}
                onPress={() => handleLogin(email, password)}
              />

              <TouchableOpacity
                testID="register-button"
                onPress={() => navigation.navigate("Register")}
                className="mt-4 items-center"
              >
                <Text className="text-gray-300">
                  Não tem conta?{" "}
                  <Text className="text-white font-semibold">
...
