...
        className="px-6 pt-6"
        showsVerticalScrollIndicator={false}
        contentContainerStyle={{ paddingBottom: 60 }}
      >

        <Text className="text-white text-3xl font-bold mb-2">
          Eventos
        </Text>

        <Text className="text-gray-300 mb-6">
          Viva experiências no Vale do Café ☕
        </Text>

...

        {!loading && events.map((event) => {
          const { date, time } = formatDateTime(event.date);

          return (
            <TouchableOpacity
              testID="event-card"
              key={event.id}
              className="bg-white/10 rounded-2xl mb-4 overflow-hidden active:opacity-80"
              onPress={() =>
                navigation.navigate("EventDetails", {
                  event,
                })
...
