...
            setSelectedRoute(null)
            setSelectedPlace({ ...paramPlace })
        }
    }, [paramTsPlace])

    return (
        <SafeAreaView testID="map-screen" edges={['top', 'left', 'right']} className="flex-1 bg-coffee items-center justify-center">
            <MapView
                selectedPlace={selectedPlace}
                selectedRoute={selectedRoute}
                setSelectedRoute={setSelectedRoute}
                setSelectedPlace={setSelectedPlace}
            />
...
