...
    city: "",
    state: "",
    location: "",
    description: "",
    organizer: "",
    price: "",
    age_rating: "Livre",
    eventDateTime: null,
    schedule: "",
    latitude: -22.4038900,
    longitude: -43.6625000,
  });

...
    "age_rating",
    "eventDateTime",
    "schedule",
  ];

  const labels = {
    title: "Título",
    location: "Local do evento",
    description: "Descrição",
    organizer: "Organizador",
    price: "Preço",
    age_rating: "Classificação Etária",
    eventDateTime: "Dia e hora do evento",
    schedule: "Programação do Evento",
  };

...
          contentContainerStyle={{
            padding: 24,
            paddingBottom: 160,
          }}
        >
          <Text className="text-white text-2xl font-bold mb-6">
            Criar Evento
          </Text>

          {visibleFields.map((field) => (
            <View key={field} className="mb-4">
              <Text className="text-gray-300 mb-1">
                {labels[field]}
...
                  <Text className="text-white">
                    {form.eventDateTime
                      ? form.eventDateTime.toLocaleString("pt-BR", {
                        dateStyle: "short",
                        timeStyle: "short",
                      })
                      : "Selecionar data e hora"}
                  </Text>
                  <Text className="text-gray-400 text-lg">📅</Text>
                </TouchableOpacity>
              ) : field === "location" ? (
                <View>
                  <TextInput
...
              ) : (
                <TextInput
                  testID={field === "schedule" ? "event-programation" : undefined}
                  value={form[field]}
                  placeholder={
                    field === "price"
                      ? "0.00"
                      : field === "schedule"
                        ? "Ex:\n18h - Abertura\n19h - Show principal\n22h - Encerramento"
                        : labels[field]
                  }
                  placeholderTextColor="#94a3b8"
                  keyboardType={field === "price" ? "numeric" : "default"}
...
                setLoading(false);
                if (success) navigation.goBack();
              }}
              className="flex-1 bg-amber-400 p-4 rounded-xl"
            >
              <Text className="text-black text-center font-semibold">
                {loading ? "Salvando..." : "Salvar"}
              </Text>
            </TouchableOpacity>
          </View>
        </ScrollView>
      </KeyboardAvoidingView>

...
