appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Digite seu e-mail"
- eraseText
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- eraseText
- inputText: "${TEST_NEW_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

- extendedWaitUntil:
    visible: "Rota do Café"
    timeout: 10000

- tapOn: "Eventos"

- tapOn:
    id: "event-card"

- assertVisible:
    id: "event-details-screen"

- scrollUntilVisible:
    element:
      text: "Localização"
    direction: DOWN

- assertVisible: "Localização"
- assertVisible: "Como chegar"
