appId: ${APP_ID}
---
- launchApp:
    clearState: true

- assertVisible: "Rota do Café"

- tapOn:
    id: "register-button"

- assertVisible: "Criar conta"

- tapOn: "Digite seu usuário"
- inputText: "TesteMaestro"

- tapOn: "Digite seu e-mail"
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- inputText: "${TEST_PASSWORD}"

- tapOn: "Confirme sua senha"
- inputText: "${TEST_PASSWORD}"

- hideKeyboard

- tapOn:
    id: "register-submit-button"

- extendedWaitUntil:
    visible: "Rota do Café"
    timeout: 10000

- assertVisible: "Rota do Café"
